# Kaku

./: .gitignore  CODE_REVIEW_INDEX.md  Cargo.toml  FEATURE_INVENTORY.md  Makefile  README.md  package-lock.json
.github/: RELEASE_NOTES.md
.github/workflows/: ci.yml  release.yml
assets/shell-integration/: check_config_version.sh  config_update_highlights.tsv  first_run.sh  install_opencode_theme.sh  setup_fish.sh  setup_zsh.sh  state_common.sh
config/: Cargo.toml
config/src/: color.rs  config.rs  daemon.rs  font.rs  keyassignment.rs  lib.rs  lua.rs  ssh.rs  terminal.rs  version.rs
crates/async_ossl/: Cargo.toml
crates/async_ossl/src/: lib.rs
crates/bidi/: Cargo.toml
crates/env-bootstrap/: Cargo.toml
crates/filedescriptor/: Cargo.toml
crates/pty/: Cargo.toml
crates/wezterm-client/: Cargo.toml
crates/wezterm-escape-parser/: Cargo.toml
crates/wezterm-mux-server-impl/: Cargo.toml
crates/wezterm-ssh/: Cargo.toml
crates/wezterm-uds/: Cargo.toml
crates/wezterm-version/: Cargo.toml
docs/: configuration.md  features.md
kaku/: Cargo.toml
kaku-gui/: Cargo.toml
kaku-gui/src/: ai_auth.rs  ai_state.rs  ai_tools.rs  commands.rs  frontend.rs  glyphcache.rs  lib.rs  main.rs  stats.rs  tabbar.rs  thread_util.rs  update.rs
kaku-ios/: Package.resolved  Package.swift  README.md  project.yml
kaku-ios/Kaku/: Info.plist
kaku-ios/Kaku.xcodeproj/: project.pbxproj
kaku/src/: chat.rs  main.rs  (+5 more)
mux/: Cargo.toml
scripts/: build.sh  check_config_release_readiness.sh  nightly.sh  release-local.sh  release.sh
termwiz/: Cargo.toml
window/: Cargo.toml
(+95 files in other folders)
